feat(settings): wire Settings screen to SRS config (limits/prioritize/strategy)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_tts: ^3.8.0   # ← これを追加
   shared_preferences: ^2.3.2
   http: ^1.2.2
+  meta: ^1.12.0
 
 
   # The following adds the Cupertino Icons font to your application.
